# pyclipr

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.rst  pybind11stubgen.py  pyproject.toml  setup.py
.github/workflows/: cd.yml  pythonpublish.yml
examples/: example.py  example_minkowski.py
python/pyclipr/: __init__.pyi  module.cpp
source/pyclipr/: module.cpp
