[project]
name = "pyclipr"
description = "Python library for polygon clipping and offsetting based on Clipper2"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    { name = "Luke Parry", email = "dev@lukeparry.uk" },
    { name = "Luktug", email = "contact@luktug.co.uk" }
]
dynamic = [
    "version"
]

keywords= [
    'polygon clipping',
    'polygon offsetting',
    'libClipper',
    'Clipper2',
    'polygon boolean',
    'polygon',
    'line clipping',
    'clipper'
]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.21"
]

[project.urls]
Homepage = "https://github.com/drlukeparry/pyclipr"
Documentation = "https://github.com/drlukeparry/pyclipr"
Repository = "https://github.com/drlukeparry/pyclipr.git"
Issues = "https://github.com/drlukeparry/pyclipr/issues"
Changelog = "https://github.com/drlukeparry/pyclipr/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "source/pyclipr/version.py"

[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.27",
    "scikit-build-core~=0.10",
    "wheel",
    "ninja",
    "numpy>1.21",
    "cmake>=3.15",
    "setuptools",
    "nanobind>=2.4",
    'hatch-build-scripts'
]


[tool.scikit-build]
cmake.version = ">=3.15"
messages.after-failure = """{bold.red}Sorry{normal}, build failed. Your platform is {platform.platform}."""
[tool.hatch.build.targets.wheel.hooks.scikit-build]
experimental = true

[tool.hatch.build.targets.wheel]
packages = ["source/pyclipr"]
artifacts = [
  "*.so",
  "*.pyi",
  "*.dll"
]

[[tool.hatch.build.targets.sdist.hooks.build-scripts.scripts]]
commands = [
    "git submodule update --init --recursive",
    "cd external/clipper2 && git checkout Clipper2_1.4.0",
    "cd external/eigen && git checkout 3.4",
    "cd external/nanobind && git checkout v2.4.0"
]
artifacts = []

[tool.mypy]
files = "setup.py"
python_version = "3.9"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true

